--- a/my-app/src/components/Header/Header.css
+++ b/my-app/src/components/Header/Header.css
@@ -128,6 +128,12 @@
     color: var(--card-dark-color);
 }
 @media only screen and  (max-width: 900px){
+    .region{
+        width: 250px;
+    }
+    .region__select{
+        width: 250px;
+    }
     .header__navbar{
         gap: 20px;
         padding-bottom: 20px;
@@ -143,23 +149,24 @@
         width: 200px;
     }
 }
-@media only screen and  (max-width: 800px){
-    .region__select{
-        width: 150px;
-    }
-    .region__drop{
-        width: 150px;
-    }
-}
 @media only screen and  (max-width: 800px){    
     .header__container{
        display: block;
        align-items: center;
        justify-content: center;
     }
+    .region{
+        width: 250px;
+    }
+    .region__select{
+        width: 250px;
+    }
+    .header__container{
+        width: max-content;
+        display: flex;
+        flex-direction: column;
+    }
     .header__logo {
-       margin: 0 auto;
-       width:  max-content;
        margin-bottom: 30px;
     }
     .header__navbar{
@@ -168,11 +175,15 @@
     }
 }
 @media only screen and  (max-width: 700px){ 
+    .header__navbar{
+        display: flex;
+        flex-wrap: wrap;
+    }
     .region__select{
-        width: 100px;
+        width: 200px;
     }
     .region__drop{
-        width: 100px;
+        width: 200px;
     }
     .phone{
         font-size: 12px;
