--- a/my-app/src/components/Main/main.css
+++ b/my-app/src/components/Main/main.css
@@ -1,5 +1,6 @@
 .main{
     padding-top: 40px;
+    padding-bottom: 40px;
 }
 .dark__main{
     background-color: gray;
@@ -198,10 +199,21 @@
         font-size: var(--font-size-medium); 
     }
 }
-@media only screen and  (max-width: 1000px){
+@media only screen and  (max-width: 800px){
+    .main__container{
+        width: max-content;
+        display: block;
+    }
+    .main__filter{
+        width: 80%;
+        margin: 0 auto;
+    }
     .card{
+        width: 80%;
         max-width: 500px;
         display: block;
+        margin: 0 auto;
+        margin-top: 40px;
     }
     .card__info{
         width: 100%;
@@ -222,5 +234,10 @@
         margin: 10px auto;
     }
  
-
+    .card__info2{
+        /* background-color: red; */
+        width: max-content;
+        margin-left: 40px;
+        border-left: none;
+    }
 }
