--- a/my-app/src/components/footer/footer.css
+++ b/my-app/src/components/footer/footer.css
@@ -3,6 +3,10 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
+.footer__dark{
+    background-color: var(--card-dark-bgcolor);
+    color: var(--card-dark-color);
+}
 .footer__container{
     max-width: 1240px;
     margin: 0 auto;
@@ -20,21 +24,24 @@
     color: white;
     font-weight: 600;
 }
+.dark__text{
+    color: var(--card-dark-color)!important;
+}
 .banner__title{
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 700;
     letter-spacing: 5px;
     cursor: pointer;
     text-decoration: none;
     color: white;
     display: block;
+    width: max-content;
 }
 .banner__title:hover{
     color: green;
     transition: 0.3s
 }
 .creator{
-    /* width: %; */
     color: white;
     font-weight: 600;
     font-size: 18px;
@@ -46,4 +53,38 @@
 .footer__link{
     display: flex;
     justify-content: space-between;
+}
+@media only screen and  (max-width: 800px){
+    .footer__container{
+        flex-wrap: wrap;
+        gap: 40px;
+        justify-content: center;
+    }
+    .footer__banner{
+        width: 50%;
+    }
+    .banner__title{
+        font-size: 30px;
+    }
+}
+@media only screen and  (max-width: 600px){
+ .banner__title{
+    font-size: 25px;
+ }   
+ .footer__banner{
+    font-size: 20px;
+    width: 100%;
+    margin-bottom: 40px;
+ }
+ .footer__container{
+    display: block;
+    width: 50%;
+    justify-content: center;
+ }
+ .creator{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 20px;
+ }
 }
