--- a/my-app/src/components/Main/main.css
+++ b/my-app/src/components/Main/main.css
@@ -50,6 +50,7 @@
     display: flex;
     align-items: center;
     user-select: none;
+    cursor: pointer;
 }
 .filter__link:hover{
     background-color: gray;
@@ -114,7 +115,7 @@
 }
 .card__info__name:hover{
     margin-bottom: 5px;
-    border-bottom: 2px solid var(--title-color);
+    border-bottom: 3px solid var(--title-color);
 }
 .card__info__adress{
     color: var(--dark-black);
@@ -232,6 +233,7 @@
         font-size: 25px;
         width: max-content;
         margin: 10px auto;
+        text-align: center;
     }
  
     .card__info2{
